Update response